--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.7",
+    "@types/html-to-text": "^9.0.1",
     "@types/node": "^20.4.2",
     "article-parser": "^7.2.6-rc1",
     "dotenv": "^16.3.1",
     "fast-xml-parser": "^4.2.6",
     "handlebars": "^4.7.7",
+    "html-to-text": "^9.0.5",
     "openai": "^3.3.0",
     "puppeteer": "^20.9.0",
     "sqlite-async": "ndp/sqlite-async#13-typescript",
