--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "html-to-text": "^9.0.5",
     "openai": "^3.3.0",
     "puppeteer": "^20.9.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "sqlite-async": "ndp/sqlite-async#13-typescript",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
